[tool.poetry]
name = "users"
version = "0.1.0"
description = ""
authors = ["Pedro López Mareque <pedro.lopez.mareque@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.14.0"
fastapi = {extras = ["standard"], version = "^0.115.5"}
SQLAlchemy = "^2.0.36"
psycopg2 = "^2.9.10"
pydantic-settings = "^2.6.1"
doublex = "^1.9.6.1"
doublex-expects = "^0.7.1"
mypy = "^1.13.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
expects = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
